fixing spacing in rst versions badge

--- a/documentation/source/_themes/fontPartsTheme/static/sass_partials/elements.sass
+++ b/documentation/source/_themes/fontPartsTheme/static/sass_partials/elements.sass
@@ -107,6 +107,11 @@ dl
 	dt
 		padding-top: calc(#{$header-height} + #{$padding})
 
+.rst-badge dl,
+.rst-badge dt
+	padding-top: 0
+	margin: 0
+	font-family: $sans-font
 
 dd
 	@media screen and (max-width: $tablet-portrait)
